HRMW-710 - Removed JWT token and code refactoring